crates/puffin-resolver/tests/snapshots/resolver__black_allow_prerelease_if_necessary.snap
---
source: crates/puffin-resolver/tests/resolver.rs
expression: resolution
---
appdirs==1.4.4
    # via black
attrs==23.1.0
    # via black
black==19.10b0
click==8.1.7
    # via black
pathspec==0.11.2
    # via black
regex==2023.10.3
    # via black
toml==0.10.2
    # via black
typed-ast==1.5.5
    # via black

