crates/puffin-resolver/tests/snapshots/resolver__black_disallow_prerelease.snap
---
source: crates/puffin-resolver/tests/resolver.rs
expression: err
---
Because there is no version of black available matching <=20.0 and root depends on black<=20.0, version solving failed.
