crates/puffin-resolver/tests/snapshots/resolver__black_lowest_direct.snap
---
source: crates/puffin-resolver/tests/resolver.rs
expression: resolution
---
black==22.1.0
click==8.1.7
    # via black
mypy-extensions==1.0.0
    # via black
pathspec==0.11.2
    # via black
platformdirs==4.0.0
    # via black
tomli==2.0.1
    # via black

