crates/puffin-resolver/tests/snapshots/resolver__black_python_310.snap
---
source: crates/puffin-resolver/tests/resolver.rs
expression: resolution
---
black==23.9.1
click==8.1.7
    # via black
mypy-extensions==1.0.0
    # via black
packaging==23.2
    # via black
pathspec==0.11.2
    # via black
platformdirs==3.11.0
    # via black
tomli==2.0.1
    # via black
typing-extensions==4.8.0
    # via black

