crates/puffin-resolver/tests/snapshots/resolver__black_respect_preference.snap
---
source: crates/puffin-resolver/tests/resolver.rs
expression: resolution
---
black==23.9.0
click==8.1.7
    # via black
mypy-extensions==1.0.0
    # via black
packaging==23.2
    # via black
pathspec==0.11.2
    # via black
platformdirs==4.0.0
    # via black

